--- a/app/templates/voting.html
+++ b/app/templates/voting.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 <div class="booking-container">
+	<h1><i class="fas fa-vote-yea"></i> Voting Form</h1>
 	<div class="booking-filter-container">
 		{{ render_meeting_filter(upcoming_meetings|sort(attribute=0, reverse=True), selected_meeting_number, label=None,
 		base_url='/voting', render_outer_container=False) }}
